name:                hachiavelli
version:             0.0.1
homepage:            https://github.com/glasnt/hachiavelli
author:              Katie McLaughlin
maintainer:          katie@glasnt.com
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.8

executable app
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings
  build-depends:       base ==4.7.*, 
                       wai,
                       warp,
                       wai-extra,
                       wai-middleware-static,
                       scotty,
                       clay, 
                       text, 
                       blaze-html,
                       blaze-markup
  -- hs-source-dirs:      
  default-language:    Haskell2010
